apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__insert_with_several_key_directives-6.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "shippingEstimate": 15,
        "price": 150
      }
    ]
  }
}
