apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__missing_entities-2.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": "Organization 1"
        },
        {
          "id": "2",
          "name": "Organization 2"
        },
        {
          "id": "3",
          "name": null
        }
      ]
    }
  },
  "errors": [
    {
      "message": "Organization not found",
      "path": [
        "currentUser",
        "allOrganizations",
        2
      ]
    }
  ]
}
