apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__no_cache_control-3.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "no-store",
)
