apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__no_data-3.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:orga:type:Organization:entity:381c4c8402e09f3588b61dec0234ad703be386abab370226cbf8c94d4d7f554b:representation:381c4c8402e09f3588b61dec0234ad703be386abab370226cbf8c94d4d7f554b:hash:e7ac2aa7c138d40c34563a196ed9d5ddf0ec3cb4a1dc0b72170cf5ca9f0e9c65:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "cached",
    "cache_control": "[REDACTED]"
  },
  {
    "key": "version:1.2:subgraph:orga:type:Organization:entity:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:representation:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:hash:e7ac2aa7c138d40c34563a196ed9d5ddf0ec3cb4a1dc0b72170cf5ca9f0e9c65:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "cached",
    "cache_control": "[REDACTED]"
  }
]
