apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__no_data-4.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": "Organization 1"
        },
        {
          "id": "2",
          "name": null
        },
        {
          "id": "3",
          "name": "Organization 3"
        }
      ]
    }
  },
  "errors": [
    {
      "message": "HTTP fetch failed: service closed",
      "path": [
        "currentUser",
        "allOrganizations",
        1
      ],
      "extensions": {
        "code": "SUBREQUEST_HTTP_ERROR",
        "service": "orga",
        "reason": "service closed"
      }
    }
  ]
}
