apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__no_store_from_request.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "1",
        "creatorUser": {
          "__typename": "User",
          "id": 2
        }
      }
    }
  }
}
